--- a/views/users/create.pug
+++ b/views/users/create.pug
@@ -4,13 +4,17 @@ block content
 
 	h1 Create user
 
+	if errors
+		each error in errors
+			.alert.alert-danger= error
+
 	form(action="/users/create", method="POST")
 		.form-group
 			label(for='name') Name
-			input#name.form-control(type='text', name='name', placeholder='Name')
+			input#name.form-control(name='name', type='text', value=values ? values.name : "")
 
 		.form-group
 			label(for='phone') Phone
-			input#phone.form-control(type='text', name='phone' placeholder='Phone')
+			input#phone.form-control(name='phone', type='text', value=values ? values.phone : "")
 
 		button.btn.btn-primary Create
