--- a/views/layout/common.pug
+++ b/views/layout/common.pug
@@ -14,8 +14,9 @@ html
 						a.nav-link(href='/') Home
 					li.nav-item
 						a.nav-link(href='/users') Users
-
 			
+			if user 
+				p= user.name
 
 		.container.pt-5
 			block content
