--- a/views/layout/common.pug
+++ b/views/layout/common.pug
@@ -14,6 +14,10 @@ html
 						a.nav-link(href='/') Home
 					li.nav-item
 						a.nav-link(href='/users') Users
+					li.nav-item
+						a.nav-link(href='/products') Products
+					li.nav-item
+						a.nav-link(href='/carts') Carts
 			
 			if user 
 				p= user.name
